updated Indonesian and Italian translation

--- a/po/wesnoth-multiplayer/id.po
+++ b/po/wesnoth-multiplayer/id.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2010-08-19 12:51+0700\n"
+"POT-Creation-Date: 2011-09-04 11:42+0200\n"
+"PO-Revision-Date: 2011-08-25 16:55+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -41,7 +41,7 @@ msgstr "Masa Kepahlawanan"
 #. [era]: id=era_khalifate
 #: data/multiplayer/eras.cfg:200
 msgid "Default + Khalifate"
-msgstr ""
+msgstr "Standar + Khalifate"
 
 #. [multiplayer_side]: id=Drakes, type=Drake Flare
 #. [multiplayer_side]: id=Drakes, type=random
@@ -53,7 +53,7 @@ msgstr "Drakes"
 #. [multiplayer_side]: id=khalifate, type=Muharib
 #: data/multiplayer/factions/khalifate-default.cfg:4
 msgid "Khalifate"
-msgstr ""
+msgstr "Khalifate"
 
 #. [multiplayer_side]: id=Knalgan Alliance, type=Dwarvish Steelclad
 #. [multiplayer_side]: id=Knalgan Alliance, type=random
@@ -93,7 +93,7 @@ msgstr "Tak mati"
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:6
 msgid "2p — Arcanclave Citadel"
-msgstr ""
+msgstr "2p — Benteng Arcanclave "
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:7
@@ -410,12 +410,12 @@ msgid ""
 "(inscribed by Gauteamus)"
 msgstr ""
 "Bertubuh ramping, bertangan tangkas\n"
-"- - Tujuh Nisan dan Eleven \n"
+"— Tujuh Nisan dan Eleven \n"
 "Meninggalkan Musuhnya dengan kesempatan yang begitu kecil\n"
-"- - Tujuh Nisan dan Eleven \n"
+"— Tujuh Nisan dan Eleven \n"
 "Penembak jitu dikenal sebagai Dragonbane\n"
 "Patung di sini mongst yang dibunuh \n"
-"- - Tujuh Nisan dan Peri \n"
+"— Tujuh Nisan — dan Elf \n"
 " (Ditulis oleh Gauteamus)"
 
 #. [side]
@@ -476,14 +476,14 @@ msgid ""
 "for vengeance, Rah Ihn Mar began the hunt....."
 msgstr ""
 "Hura Ihn Mar, Juara Burning Hills, berjalan ke wilayah Danau Ruaskkolin "
-"dalam mengejar Elvish Hero Terowydlithrol, dikenal diantara para Elf sebagai "
-"''The Dragonbane.'' Dikatakan bahwa Terowydlithrol telah membunuh Naga Api "
-"yang mengancam sebuah desa Elf, dan memprakarsai''balasan''di mana sejumlah "
-"37 Bangsa drake, berkemah di sebuah jurang terdekat dan diyakini memiliki "
-"kesetiaan dengan Naga, dibantai. Mengetahui bahwa Bangsa drake tidak "
-"bersalah, Rah Ihn Mar datang ke Danau Ruaskkolin untuk memburu dan membunuh "
-"Terowydlithrol, yang terlihat memasuki kawasan ini tetapi sehari yang lalu. "
-"Pembakaran untuk balas dendam, Rah Ihn Mar mulai berburu ....."
+"dalam mengejar Pahlawan Elf Terowydlithrol, dikenal diantara para Elf "
+"sebagai ''The Dragonbane.'' Dikatakan bahwa Terowydlithrol telah membunuh "
+"Naga Api yang mengancam sebuah desa Elf, dan memprakarsai''balasan''di mana "
+"sejumlah 37 Bangsa drake, berkemah di sebuah jurang terdekat dan diyakini "
+"memiliki kesetiaan dengan Naga, dibantai. Mengetahui bahwa Bangsa drake "
+"tidak bersalah, Rah Ihn Mar datang ke Danau Ruaskkolin untuk memburu dan "
+"membunuh Terowydlithrol, yang terlihat memasuki kawasan ini tetapi sehari "
+"yang lalu. Pembakaran untuk balas dendam, Rah Ihn Mar mulai berburu ....."
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:152
@@ -510,6 +510,8 @@ msgid ""
 "It would seem that no one knows the tale of this brave spider.\n"
 "(inscribed by WinnerA)"
 msgstr ""
+"Tampaknya bahwa tidak ada yang tahu kisah laba-laba pemberani ini.\n"
+"(ditulis oleh WinnerA)"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:168
@@ -517,6 +519,8 @@ msgid ""
 "The tale of this unlucky highwayman is yet to be told.\n"
 "(inscribed by WinnerB)"
 msgstr ""
+"Kisah perampok malang ini adalah belum diketahui.\n"
+"(ditulis oleh WinnerB)"
 
 #. [unit]
 #: data/multiplayer/scenarios/2p_Caves_of_the_Basilisk.cfg:176
@@ -570,7 +574,7 @@ msgstr ""
 "Namun, tidak lama setelah itu, masyarakat wose lokal mendengar mendekatnya "
 "rakasa mengerikan, cukup kuat untuk menghancurkan beberapa woses yang "
 "tinggal di daerah ini. Mereka segera pindah (cukup cepat untuk ukuran para "
-"Woses), tapi Bramwythl tertinggal - mereka tergesa-gesa, tak seorang pun "
+"Woses), tapi Bramwythl tertinggal — mereka tergesa-gesa, tak seorang pun "
 "ingat untuk menemukannya dan menceritakan bahaya kepadanya\n"
 "Dia ditangkap  oleh Basilisk tanpa disadari, dan berubah menjadi batu bahkan "
 "sebelum ia mengenali binatang (buas) itu. bentuk ketakutannya masih berdiri "
@@ -636,7 +640,7 @@ msgid ""
 "(inscribed by Paterson)"
 msgstr ""
 "Pejuang pemberani ini, dikenal sebagai Rilhon diantara Naga, mendengar "
-"menceritakan harta karun yang luar biasa yang telah hilang dalam sebuah gua- "
+"menceritakan harta karun yang luar biasa yang telah hilang dalam sebuah gua—"
 "tombak berair  yang kepalanya dikatakan telah dibentuk dari gigi Chak'kso "
 "Ney'yks, seorang sesepuh Basilisk telah lama dibunuh oleh pahlawan Elf, "
 "Eloralduil. Menurut legenda, senjatany beristirahat di suatu tempat di dasar "
@@ -781,12 +785,12 @@ msgstr "Team Manusia"
 #. [then]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1386
 msgid "Single player mode — uses the reduced strength spawns."
-msgstr "Gaya Pemain tunggal- gunakan kekuatan telur ikan  yang dikurangi."
+msgstr "Gaya pemain tunggal — gunakan kekuatan yang dikurangi."
 
 #. [else]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1389
 msgid "Two player mode — uses the full strength spawns."
-msgstr "Modus dua pemain - menggunakan kekuatan penuh."
+msgstr "Modus dua pemain — menggunakan kekuatan penuh."
 
 #. [objectives]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1409
@@ -806,11 +810,10 @@ msgstr "Kehilangan seluruh pemimpin timmu"
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1426
 msgid "Dark Forecast — a random survival scenario"
-msgstr "Ramalan Kegelapan - skenario bertahan hidup yang acak"
+msgstr "Ramalan Kegelapan — skenario bertahan hidup yang acak"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1449
-#, fuzzy
 msgid ""
 "Your aim is to survive the spawning waves and defeat the final arch-"
 "enemies.\n"
@@ -836,16 +839,16 @@ msgid ""
 "<span color='green'>Rhuvaen</span>\n"
 "— WML implementation"
 msgstr ""
-"Tujuan Anda adalah untuk mempertahan tempat ikan bertelur dari gelombang dan "
-"mengalahkan musuh terakhir.\n"
-"       \n"
-"Gelombang tempat ikan bertelur yang dihasilkan secara acak dan akan berbeda "
-"setiap kali kegelapan dimainkan\n"
+"Tujuan anda adalah untuk bertahan gelombang timbul dan mengalahkan musuh-"
+"musuh terakhir.\n"
+"\n"
+"Gelombang timbul yang dihasilkan secara acak dan akan berbeda setiap kali "
+"Ramalan Kegelapan dimainkan.\n"
 "\n"
 "\n"
-"Mereka muncul di sepanjang utara, selatan dan barat tepi peta - meskipun "
-"mereka yang paling mungkin untuk bertelur di tepi barat. Bibit gelombang "
-"tersebut muncul agak teratur\n"
+"Mereka muncul di sepanjang utara, selatan dan barat tepi-tepi peta — "
+"meskipun mereka yang paling mungkin untuk timbul di tepi barat. Gelombang-"
+"gelombang timbul tersebut muncul agak teratur.\n"
 "\n"
 "\n"
 "cuaca juga akan berubah secara acak, yang mempengaruhi tata letak peta.\n"
@@ -855,16 +858,15 @@ msgstr ""
 "<span color='red'> Prakiraan kegelapan dibuat oleh:</span>\n"
 "\n"
 "<span color='green'>jb</span>\n"
-"- desain Peta, kelompok bibit dan konsep skenario\n"
+"— desain peta, kelompok bibit dan konsep skenario\n"
 "\n"
 "<span color='green'> Rhuvaen</ span>\n"
-"- WML pelaksanaan"
+"— WML pelaksanaan"
 
 #. [message]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1454
-#, fuzzy
 msgid "So this is the accursed valley — a land ours for the taking."
-msgstr "Jadi ini adalah lembah terkutuk - negeri yang kita ingin ambil."
+msgstr "Jadi ini adalah lembah terkutuk — sebuah negeri yang kita ingin ambil."
 
 #. [message]
 #: data/multiplayer/scenarios/2p_Dark_Forecast.cfg:1458
@@ -980,16 +982,12 @@ msgstr "2p — Dusun kecil"
 
 #. [multiplayer]: id=multiplayer_Hamlets
 #: data/multiplayer/scenarios/2p_Hamlets.cfg:7
-#, fuzzy
-#| msgid ""
-#| "Warfare transforms the simple farms and villages of a peaceful region "
-#| "into a subtly parceled battlefield."
 msgid ""
 "Warfare transforms the simple farms and villages of a peaceful region into a "
 "subtly parceled battlefield. Designed by Doc Paterson."
 msgstr ""
-"Peperangan mengubah peternakan sederhana dan desa-desa daerah damai ke dalam "
-"kerumitan bidang medan perang."
+"Peperangan mengubah peternakan sederhana dan desa-desa dari daerah damai ke "
+"dalam bidang medan perang yang rumit. Dirancang oleh Doc Paterson."
 
 #. [multiplayer]: id=multiplayer_Hornshark_Island
 #: data/multiplayer/scenarios/2p_Hornshark_Island.cfg:24
@@ -1254,12 +1252,14 @@ msgstr ""
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:37
 msgid "2p — Thousand Stings Garrison"
-msgstr ""
+msgstr "2p — Seribu Sengatan Garnisun"
 
 #. [multiplayer]: id=multiplayer_thousand_stings_garrison
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:39
+#, fuzzy
+#| msgid "Designed by Doc Paterson."
 msgid "A strange place. Designed by Doc Paterson"
-msgstr ""
+msgstr "Dirancang oleh Doc Paterson."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:90
@@ -1328,10 +1328,8 @@ msgstr ""
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:153
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:154
 #: data/multiplayer/scenarios/2p_Thousand_Stings_Garrison.cfg:155
-#, fuzzy
-#| msgid "statue"
 msgid "Statue"
-msgstr "patung"
+msgstr "Patung"
 
 #. [multiplayer]: id=multiplayer_Weldyn_Channel
 #: data/multiplayer/scenarios/2p_Weldyn_Channel.cfg:5
@@ -1670,12 +1668,11 @@ msgstr "4p — Pengepungan benteng "
 
 #. [multiplayer]: id=multiplayer_Siege_Castles
 #: data/multiplayer/scenarios/4p_Siege_Castles.cfg:9
-#, fuzzy
 msgid ""
 "36X36 4 player map where 4 mighty castles face off at the convergence of two "
 "rivers. Works well as 2 vs. 2 or FFA. There are approximately 45 villages."
 msgstr ""
-"40X30 4 pemain peta di mana 4 benteng yang kuat menghadap lurus ke dua "
+"36X36 4 pemain peta di mana 4 benteng yang kuat berhadapan lurus ke dua "
 "sungai. Sangat baik dimainkan 2 vs. 2 atau FFA. Ada sekitar 45 desa."
 
 #. [multiplayer]: id=multiplayer_4p_Underworld
@@ -1691,7 +1688,7 @@ msgstr "Sebuah peta 2 vs. 2 cepat bertempat jauh di bawah permukaan."
 #. [multiplayer]: id=multiplayer_Xanthe_Chaos
 #: data/multiplayer/scenarios/4p_Xanthe_Chaos.cfg:7
 msgid "4p — Xanthe Chaos"
-msgstr "4p-  Kekacauan Xanthe"
+msgstr "4p — Kekacauan Xanthe"
 
 #. [multiplayer]: id=multiplayer_Xanthe_Chaos
 #: data/multiplayer/scenarios/4p_Xanthe_Chaos.cfg:9
@@ -1803,15 +1800,13 @@ msgstr "Yang bertahan"
 
 #. [objective]: condition=win
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:426
-#, fuzzy
 msgid "Survive all enemy attacks"
 msgstr "Bertahan dari seluruh serangan musuh"
 
 #. [objective]: condition=lose
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:432
-#, fuzzy
 msgid "Death of your team leaders"
-msgstr "Kematian dari pemimpin timmu"
+msgstr "Kematian dari pemimpin-pemimpin timmu"
 
 #. [note]
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:437
@@ -1846,7 +1841,7 @@ msgstr "Giliran 14: Drakes"
 #. [label]
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:468
 msgid "Turn 17: Undead"
-msgstr "Giliran 17: Tak Mati"
+msgstr "Giliran 17: Mayat Hidup"
 
 #. [label]
 #: data/multiplayer/scenarios/6p_Team_Survival.cfg:473
@@ -1905,10 +1900,8 @@ msgstr ""
 
 #. [multiplayer]: id=multiplayer_Volcano
 #: data/multiplayer/scenarios/6p_Volcano.cfg:7
-#, fuzzy
-#| msgid "6p — Hexcake"
 msgid "6p — Volcano"
-msgstr "6p — Hexcake"
+msgstr "6p — Gunung Berapi"
 
 #. [multiplayer]: id=multiplayer_Volcano
 #: data/multiplayer/scenarios/6p_Volcano.cfg:9
@@ -1916,6 +1909,8 @@ msgid ""
 "A 3vs3 battle to control the ashes of a kingdom long ago collapsed from a "
 "volcanic eruption. It has 36 villages."
 msgstr ""
+"Pertempuran 3vs3 untuk menguasai abu kerajaan zaman dahulu runtuh karena "
+"letusan gunung berapi. Ini memiliki 36 desa."
 
 #. [multiplayer]: id=multiplayer_Waterloo_Sunset
 #: data/multiplayer/scenarios/6p_Waterloo_Sunset.cfg:7
@@ -2095,6 +2090,15 @@ msgid ""
 msgstr ""
 "Sebuah benchmark Wesnoth, gunakan --no-delay --multiplayer --"
 "scenario=wesbench_shroud_walk --exit-at-end."
+
+#~ msgid ""
+#~ "Arcanclave Citadel is the central stronghold of the Arcanclave region. It "
+#~ "was finished in the year 968 YW, and served as the military headquarters "
+#~ "of Cynsaun the First. Designed by Doc Paterson."
+#~ msgstr ""
+#~ "Benteng Arcanclave adalah benteng pusat daerah Arcanclave. Ini selesai "
+#~ "pada 968 tahun YW, dan digunakan sebagai markas besar militer Cynsaun "
+#~ "Pertama. Dirancang oleh Doc Paterson."
 
 #~ msgid ""
 #~ "Players must navigate the dispersive terrain of this small but "
