--- a/po/wesnoth-anl/ang@latin.po
+++ b/po/wesnoth-anl/ang@latin.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2011-05-24 17:39-0500\n"
+"PO-Revision-Date: 2011-09-08 21:23-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
-"Language-Team: none\n"
+"Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -301,7 +301,7 @@ msgstr ""
 #. [option]: speaker=narrator
 #: data/multiplayer/scenarios/ANL_utils/ANL_help.cfg:115
 msgid "Done"
-msgstr ""
+msgstr "Gedon"
 
 #. [message]: speaker=unit
 #: data/multiplayer/scenarios/ANL_utils/ANL_leader_options.cfg:47
