--- a/po/wesnoth-help/ang@latin.po
+++ b/po/wesnoth-help/ang@latin.po
@@ -8,9 +8,9 @@ msgstr ""
 "Project-Id-Version: ang@latin\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2011-08-10 11:13-0500\n"
+"PO-Revision-Date: 2011-09-08 20:46-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
-"Language-Team: none\n"
+"Language-Team: Old English <http://wiki.wesnoth.org/OldEnglishTranslation>\n"
 "Language: ang@latin\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1730,7 +1730,7 @@ msgstr ""
 #. [topic]: id=traits_quick
 #: data/core/help.cfg:369
 msgid "Quick"
-msgstr ""
+msgstr "Sƿift"
 
 #. [topic]: id=traits_quick
 #: data/core/help.cfg:370
@@ -3472,12 +3472,12 @@ msgstr ""
 #. [trait]: id=quick
 #: data/core/macros/traits.cfg:98
 msgid "quick"
-msgstr ""
+msgstr "sƿift"
 
 #. [trait]: id=quick
 #: data/core/macros/traits.cfg:99
 msgid "female^quick"
-msgstr ""
+msgstr "sƿiftu"
 
 #. [trait]: id=intelligent
 #: data/core/macros/traits.cfg:115
