--- a/po/wesnoth-manpages/la.po
+++ b/po/wesnoth-manpages/la.po
@@ -14,8 +14,8 @@ msgstr ""
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
 "PO-Revision-Date: 2011-07-07 01:10+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
-"Language-Team: none\n"
-"Language: \n"
+"Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
+"Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ASCII\n"
 "Content-Transfer-Encoding: 8bit\n"
