--- a/po/wesnoth-sotbe/la.po
+++ b/po/wesnoth-sotbe/la.po
@@ -15,8 +15,8 @@ msgstr ""
 "POT-Creation-Date: 2011-07-24 18:18+0200\n"
 "PO-Revision-Date: 2011-07-17 17:36+0100\n"
 "Last-Translator: Thomas Hockings <elprofesh@gmail.com>\n"
-"Language-Team: Latin\n"
-"Language: \n"
+"Language-Team: Latin <http://wiki.wesnoth.org/LatinTranslation>\n"
+"Language: la\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
