updated Galician translation

--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -1,70 +1,75 @@
+# Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2009-12-27 16:38+0100\n"
-"Last-Translator: Automatically generated\n"
-"Language-Team: none\n"
+"POT-Creation-Date: 2011-09-04 11:42+0200\n"
+"PO-Revision-Date: 2011-09-12 13:14+0200\n"
+"Last-Translator: Adrián Chaves Fernández (Gallaecio) <adriyetichaves@gmail."
+"com>\n"
+"Language-Team: Galician <proxecto@trasno.net>\n"
 "Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
+"X-Generator: Lokalize 1.2\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:11
 msgid "Dead Water"
-msgstr ""
+msgstr "Augas mortas"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:12
 msgid "DW"
-msgstr ""
+msgstr "AM"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:16
 msgid "(Beginner)"
-msgstr ""
+msgstr "(principiante)"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:16
 msgid "Citizen"
-msgstr ""
+msgstr "Cidadán"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:17
 msgid "(Normal)"
-msgstr ""
+msgstr "(normal)"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:17
 msgid "Fighter"
-msgstr ""
+msgstr "Loitador"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:18
 msgid "(Challenging)"
-msgstr ""
+msgstr "(esixente)"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:18
 msgid "Warrior"
-msgstr ""
+msgstr "Guerreiro"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:19
 msgid "(Difficult)"
-msgstr ""
+msgstr "(difícil)"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:19
 msgid "Triton"
-msgstr ""
+msgstr "Tritón"
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:22
 msgid "(Intermediate level, 10 scenarios.)"
-msgstr ""
+msgstr "Nivel medio, 10 escenarios."
 
 #. [campaign]: id=Dead_Water
 #: data/campaigns/Dead_Water/_main.cfg:22
@@ -77,26 +82,34 @@ msgid ""
 "your troops!\n"
 "\n"
 msgstr ""
+"Poraste nas escamas de Cai Crelis, fillo e herdeiro do último rei sirénido, "
+"pero aínda un mozo. Un nigromante está a converter aos teus súbditos en "
+"escravos non mortos! Lidera ao teu pobo nunha misión para convencer a unha "
+"poderosa feiticeira sirénida de axudarvos a repeler a invasión. As augas das "
+"Terras Nórdicas son perigosas, e a túa astucia e valentía serán a clave da "
+"vosa supervivencia. Claro que antes de nada, deberás gañarte o respecto das "
+"tropas!\n"
+"\n"
 
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:28
 msgid "Campaign design and programming"
-msgstr ""
+msgstr "Deseño da campaña e programación"
 
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:34
 msgid "Script-doctoring and cleanup for mainline"
-msgstr ""
+msgstr "Asesoramento técnico e adaptación ás normas oficiais"
 
 #. [about]
 #: data/campaigns/Dead_Water/_main.cfg:40
 msgid "Artwork"
-msgstr ""
+msgstr "Material gráfico"
 
 #. [scenario]: id=01_Invasion
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:36
 msgid "Invasion!"
-msgstr ""
+msgstr "A invasión"
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:45
@@ -110,6 +123,14 @@ msgid ""
 "always, they were driven back to dry land with heavy losses, the salt water "
 "of the bay stinging their wounds."
 msgstr ""
+"No afastado norte, onde a auga do mar molla as faldras das Montañas da Dor, "
+"existe unha baía de boca estreita en cuxas calmas augas se erixe a cidade "
+"sirénida de Ioza. O porto natural, así como a prosperidade dos seus "
+"habitantes, sempre atraeu a atención dos ollos envexosos, pero nunca houbo "
+"rival para a destreza dos sirénidos no medio acuático. Case todos os anos, "
+"orcos da cidade portuaria de Tírigaz —ao norte de Ioza— atacaban a cidade "
+"dos sirénidos, tan previsíbeis como as augas da primavera; as feridas dos "
+"poucos que conseguían regresar a terra firme proían por mor da salitre."
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:49
@@ -124,6 +145,15 @@ msgid ""
 "steer well clear of the merfolk. The merfolk army caught up with the orc "
 "band as it reached Tirigaz."
 msgstr ""
+"No ano 626 d.W., a maior partida de asalto que xamais vira a baía atacou "
+"Ioza. O rei, Cai Laudis, liderou ás tropas nun esforzo por repeler aos "
+"invasores. E os sirénidos conseguírono, se ben o prezo en vidas foi maior "
+"que nunca. E unha desas vidas foi a da muller de Laudis. A dor do rei pola "
+"perda non tardou en converterse en ira, e ordenou que o exército se "
+"prepararse para seguir aos orcos abandeirando non vinganza, senón o desexo "
+"de protexer a cidade cunha demostración de forza que lles aprendese aos "
+"orcos a manterse á marxe dos sirénidos. O exército das augas alcanzou ao "
+"grupo de orcos á súa chegada a Tírigaz."
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:53
@@ -135,6 +165,12 @@ msgid ""
 "poured forth from the city. The merfolk were trapped, and found themselves "
 "vastly outnumbered."
 msgstr ""
+"Cubertos polo manto da noite, os sirénidos coáronse na baía coa intención de "
+"realizar un ataque sorpresa cos primeiros raios de sol. E os orcos non só "
+"estaban preparados para o ataque, senón que tiñan unha sorpresa de seu. "
+"Dunhas embarcacións na boca da baía, que non parecían máis que restos "
+"abandonados, empezaron a saír hordas de orcos; tamén da cidade. Os sirénidos "
+"estaban atrapados, e superados amplamente en número."
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:57
@@ -149,6 +185,16 @@ msgid ""
 "destroyed. When the remaining soldiers returned to Jotha, Krellis, the young "
 "son of Kai Laudiss, learned that he had become kai."
 msgstr ""
+"O exército de Cai Laudris loitou con fereza, e cinco orcos caeron por cada "
+"unha das súas baixas. O propio rei loitou temerariamente, acabando cun orco "
+"con cada golpe que asestaba co seu mazo. Os orcos descubriron que aquel "
+"grupo de sirénidos era máis duro do que imaxinaran, e acabaron fuxindo ao "
+"bosque para protexerse das lanzas dos seus invencíbeis inimigos. Tal e como "
+"o rei esperara dende un principio, aquela derrota tardaría en borrarse da "
+"memoria dos orcos. Pero conseguila non foi barato: a maior parte do exército "
+"das augas fora destruído, e o propio Laudis fora envelenado cun dardo. Cando "
+"os soldados superviventes regresaron a Ioza, Crelis recibiu entre bágoas a "
+"nova de que el era agora o rei."
 
 #. [part]
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:61
@@ -160,11 +206,17 @@ msgid ""
 "to preside over an age of peace. Unfortunately, that was not to be. A new "
 "enemy appeared from under the mountains."
 msgstr ""
+"Cai Crelis considerábase novo de máis para as responsabilidades do reino, "
+"polo que recorreu constantemente ao consello de Silana, unha sacerdotisa que "
+"fora amiga de seu pai e que o mozo coñecía dende moi novo. Ela lamentaba "
+"terribelmente a morte do anterior rei, pero estaba convencida de que, grazas "
+"ao seu sacrificio, Crelis viviría tempos de paz. Por desgraza, a sacerdotisa "
+"estaba equivocada. Do sur das montañas chegou un novo inimigo."
 
 #. [side]: type=Dark Sorcerer, id=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:83
 msgid "Undead Forces"
-msgstr ""
+msgstr "Forzas dos non mortos"
 
 #. [objective]: condition=win
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:202
@@ -172,32 +224,32 @@ msgstr ""
 #: data/campaigns/Dead_Water/scenarios/06_Uncharted_Islands.cfg:145
 #: data/campaigns/Dead_Water/scenarios/07_Bilheld.cfg:140
 msgid "Defeat enemy leader"
-msgstr ""
+msgstr "Derrota ao líder inimigo."
 
 #. [unit]: type=Mermaid Priestess, id=Cylanna
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:228
 msgid "Cylanna"
-msgstr ""
+msgstr "Silana"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:266
 msgid "Is something wrong, priestess?"
-msgstr ""
+msgstr "Hai algún problema, Silana?"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:271
 msgid "Maybe. I smell death and decay."
-msgstr ""
+msgstr "Pode. Cheiro morte, morte e putrefacción."
 
 #. [unit]: type=Merman Netcaster, id=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:314
 msgid "Gwabbo"
-msgstr ""
+msgstr "Guabo"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:332
 msgid "Back, you fiend! You have not won...I will return to finish this."
-msgstr ""
+msgstr "Atrás, demo! Isto non acaba aquí… Volverei para acabar contigo!"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:343
@@ -206,11 +258,14 @@ msgid ""
 "without mercy. I managed to fight my way clear, and have come to seek your "
 "aid."
 msgstr ""
+"Maxestade, atácannos! Unhas criaturas malignas invadiron as nosas vilas e "
+"asasinaron aos nosos sen piedade. Eu conseguín abrirme camiño, e preséntome "
+"ante vós para pedirvos axuda."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:348
 msgid "What manner of creatures were they?"
-msgstr ""
+msgstr "Que clase de criaturas eran?"
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:353
@@ -220,6 +275,10 @@ msgid ""
 "our weapons. And they smelled like nothing in the sea, of dank earth and "
 "rottenness."
 msgstr ""
+"Na miña vida vin criaturas semellantes. Eras coma humanos, pero sen carne. "
+"As nosas lanzas atravesábanos mentres eles <i>rían</i> e continuaban "
+"avanzando coma se nada. E o seu cheiro era unha mestura de terra húmida e "
+"putrefacción."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:358
@@ -227,6 +286,8 @@ msgid ""
 "Undead. This will be your first real test as a leader, Kai Krellis. You must "
 "defeat these creatures."
 msgstr ""
+"Non mortos. Este será o teu primeiro reto real como líder, Cai Crelis. Debes "
+"derrotar a estas criaturas."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:363
@@ -235,6 +296,8 @@ msgid ""
 "if you will permit — you reach the age now where a kai must learn battle "
 "skills."
 msgstr ""
+"Maxestade, rógolle que lidere o ataque, para así animará ás tropas. E se mo "
+"permite, hei de dicir que xa ten idade para aprender a arte da batalla."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:368
@@ -242,6 +305,8 @@ msgid ""
 "Gwabbo speaks wisely. You must fight; I will protect you as much as I can..."
 "but when war looms, a kai must lead. It is our way."
 msgstr ""
+"Guabo está no certo, debes loitar. Protexereite canto estea nas miñas mans, "
+"pero xa coñeces o dito: «cando a guerra chegar, o rei ha liderar»."
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:373
@@ -249,6 +314,9 @@ msgid ""
 "You have few trained fighters, so you can only recruit three of each level 1 "
 "unit. There is no limit on citizens."
 msgstr ""
+"Contas con algúns loitadores adestrados, polo que só poderás recrutar tres "
+"unidades de primeiro nivel de cada tipo, a excepción dos cidadáns, dos que "
+"non terás límite."
 
 #. [message]: speaker=Mal-Kevek
 #: data/campaigns/Dead_Water/scenarios/01_Invasion.cfg:403
@@ -2611,7 +2679,7 @@ msgstr ""
 
 #: data/campaigns/Dead_Water/utils/dw-utils.cfg:106
 msgid "Kai Krellis"
-msgstr ""
+msgstr "Cai Crelis"
 
 #. [object]: id={ID}
 #: data/campaigns/Dead_Water/utils/items.cfg:8
