--- a/po/wesnoth-httt/cs.po
+++ b/po/wesnoth-httt/cs.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2010-04-10 16:13+0100\n"
+"POT-Creation-Date: 2011-09-04 11:42+0200\n"
+"PO-Revision-Date: 2011-09-14 22:15+0100\n"
 "Last-Translator: VladimírSlávik <slavik.vladimir@nospam@seznam.cz>\n"
 "Language-Team: Czech <wesnoth-cs-l@nospam.buchtovi.cz>\n"
 "Language: cs\n"
@@ -70,9 +70,8 @@ msgstr "Šampión"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:21
-#, fuzzy
 msgid "(Novice level, 23 scenarios.)"
-msgstr "(Obtížnost: začátečník, 25 scénářů)"
+msgstr "(Obtížnost: začátečník, 23 scénářů)"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:21
@@ -549,7 +548,6 @@ msgstr "Nesmíme se ohlížet zpět. Musíme jít rychle!"
 
 #. [scenario]: id=02_Blackwater_Port
 #: data/campaigns/Heir_To_The_Throne/scenarios/02_Blackwater_Port.cfg:4
-#, fuzzy
 msgid "scenario name^Blackwater Port"
 msgstr "Přístav temných vod"
 
@@ -1538,9 +1536,8 @@ msgstr "Uteč do Elensefaru"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/05a_Muff_Malal_Peninsula.cfg:26
-#, fuzzy
 msgid "Defeat Muff Malal"
-msgstr "Muff Malal"
+msgstr "Poraz Muff Malala"
 
 #. [side]: type=Dark Sorcerer, id=Muff Malal
 #: data/campaigns/Heir_To_The_Throne/scenarios/05a_Muff_Malal_Peninsula.cfg:62
@@ -2231,7 +2228,6 @@ msgstr "Kalian se sešel a rozhodl: musíme získat Ohnivé žezlo."
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/06_The_Siege_of_Elensefar.cfg:595
-#, fuzzy
 msgid "The Sceptre of Fire? What’s that?"
 msgstr "Ohnivé žezlo? Co to je?"
 
@@ -6285,9 +6281,8 @@ msgstr "Na výběr bohužel nemáme. Do jeskyně!"
 
 #. [objective]: condition=win
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:962
-#, fuzzy
 msgid "Reach the cave"
-msgstr "Dosáhni jeskyně."
+msgstr "Dosáhni jeskyně"
 
 #. [message]: speaker=Konrad
 #: data/campaigns/Heir_To_The_Throne/scenarios/19c_Cliffs_of_Thoria.cfg:1006
@@ -6352,9 +6347,8 @@ msgstr "Počet kol vyprší aniž by jsi se dostal k lesu"
 
 #. [objectives]
 #: data/campaigns/Heir_To_The_Throne/scenarios/20a_North_Elves.cfg:50
-#, fuzzy
 msgid "Note: your encampment will be dismantled after the first turn."
-msgstr "Poznámka: Tvé ležení bude odstraněno po prvním kole.\n"
+msgstr "Poznámka: Tvé ležení bude odstraněno po prvním kole."
 
 #. [side]: type=Commander, id=Konrad
 #. [side]: type=Elvish Lord, id=Uradredia
@@ -7313,7 +7307,6 @@ msgstr ""
 
 #. [message]: speaker=Li'sar
 #: data/campaigns/Heir_To_The_Throne/scenarios/22_Return_to_Wesnoth.cfg:187
-#, fuzzy
 msgid ""
 "What? Me, a traitor? It is the Queen who is a traitor, for not obeying the "
 "wishes of King Garard II. We have the Sceptre of Fire, so let us in!"
@@ -8615,98 +8608,3 @@ msgstr ""
 "Unikl s Konrádem do lesů jihozápadně od hranic Wesnothu, kde ho vychovával "
 "pod ochranu elfů. Přitom však musel smutně přihlížet, jak začala Ašvířina "
 "strašná vláda strachu..."
-
-#, fuzzy
-#~ msgid ""
-#~ "A final blow destroys the lich, releasing a small shock wave of energy "
-#~ "outwards. The Death Knights silently fall to the ground, inanimate. A "
-#~ "giant cloud of dust bellows out as the remnants of the lich’s once-mortal "
-#~ "skin and centuries of grime and gristle are dislodged for the last time."
-#~ msgstr ""
-#~ "Poslední úder ničí liche, uvolňujíc ven malou vlnu energie. Rytíři smrti "
-#~ "padají tiše k zemi, nehybní. Obrovské mračno prachu vyráží ven, když jsou "
-#~ "zbytky lichovy kdysi smrtelné kůže a staletí špíny a drtě naposled "
-#~ "uvolněny."
-
-#~ msgid "Herbert"
-#~ msgstr "Herbert"
-
-#~ msgid "Turns run out"
-#~ msgstr "Vyprší počet kol"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat the enemy leader</span> <small>(special bonus)"
-#~ "</small>"
-#~ msgstr ""
-#~ "<span color='white'>Alternativní cíl:</span>\n"
-#~ "<span color='green'>Poraz nepřátelského vůdce</span> <small>(zvláštní "
-#~ "bonus)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span> <small>(early finish "
-#~ "bonus)</small>"
-#~ msgstr ""
-#~ "<span color='white'>Alternativní cíl:</span>\n"
-#~ "<span color='green'>Poraz všechny nepřátelské vůdce</span> <small>(bonus "
-#~ "za rychlé dokončení)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat Muff Malal</span> <small>(early finish bonus)</"
-#~ "small>"
-#~ msgstr ""
-#~ "<span color='white'>Alternativní cíl:</span>\n"
-#~ "<span color='green'>Poraz Muff Malala</span> <small>(bonus za rychlé "
-#~ "dokončení)</small>"
-
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span> <small>(special bonus)"
-#~ "</small>"
-#~ msgstr ""
-#~ "<span color='white'>Alternativní cíl:</span>\n"
-#~ "<span color='green'>Poraz všechny nepřátelské vůdce</span> <small>"
-#~ "(zvláštní bonus)</small>"
-
-# kolik jich je?
-#~ msgid ""
-#~ "<span color='white'>Alternative objective:</span>\n"
-#~ "<span color='green'>Eradicate the liches</span> <small>(early finish "
-#~ "bonus)</small>"
-#~ msgstr ""
-#~ "<span color='white'>Alternativní cíl:</span>\n"
-#~ "<span color='green'>Znič liche</span> <small>(bonus za rychlé dokončení)</"
-#~ "small>"
-
-#~ msgid ""
-#~ "<span color='white'>Bonus objective:</span>\n"
-#~ "<span color='green'>Defeat all Death Knights first</span>"
-#~ msgstr ""
-#~ "<span color='white'>Bonusový cíl:</span>\n"
-#~ "<span color='green'>Nejprve poraz všechny rytíře smrti</span>"
-
-#~ msgid ""
-#~ "<span color='white'>Optional objective:</span>\n"
-#~ "<span color='green'>Rescue the sergeant</span>"
-#~ msgstr ""
-#~ "<span color='white'>Vedlejší cíl:</span>\n"
-#~ "<span color='green'>Zachraň seržanta</span>"
-
-#~ msgid ""
-#~ "<span color='white'>Optional objective:</span>\n"
-#~ "<span color='green'>Help the Wose fend off the undead attack</span>"
-#~ msgstr ""
-#~ "<span color='white'>Vedlejší cíl:</span>\n"
-#~ "<span color='green'>Pomoz stromovému lidu odrazit útok nemrtvých</span>"
-
-#~ msgid "Turns expire"
-#~ msgstr "Čas vyprší."
-
-#~ msgid ""
-#~ "<span color='white'>Bonus objective:</span>\n"
-#~ "<span color='green'>Defeat all enemy leaders</span>"
-#~ msgstr ""
-#~ "<span color='white'>Bonusový cíl:</span>\n"
-#~ "<span color='green'>Poraz všechny nepřátelské vůdce</span>"
