Updated the British English translation.

--- a/po/wesnoth/en_GB.po
+++ b/po/wesnoth/en_GB.po
@@ -4543,7 +4543,7 @@ msgstr "Create Unit (Debug!)"
 
 #: src/menu_events.cpp:1558 src/multiplayer_wait.cpp:131
 msgid "Gender: "
-msgstr "Leader: "
+msgstr "Gender: "
 
 #: src/menu_events.cpp:1849
 msgid "Search"
