--- a/po/wesnoth-manpages/id.po
+++ b/po/wesnoth-manpages/id.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "POT-Creation-Date: 2011-08-27 10:13+0300\n"
-"PO-Revision-Date: 2010-08-20 04:10+0700\n"
+"PO-Revision-Date: 2011-09-22 17:20+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -24,7 +24,7 @@ msgstr "WESNOTH"
 #: ../../doc/man/wesnoth.6:16 ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "2011"
-msgstr ""
+msgstr "2011"
 
 #. type: TH
 #: ../../doc/man/wesnoth.6:16
@@ -36,7 +36,7 @@ msgstr "wesnoth"
 #: ../../doc/man/wesnoth.6:16
 #, no-wrap
 msgid "Battle for Wesnoth"
-msgstr "Berjuang demi Wesnoth"
+msgstr "Pertempuran demi Wesnoth"
 
 #. type: SH
 #: ../../doc/man/wesnoth.6:18 ../../doc/man/wesnothd.6:18
@@ -48,7 +48,7 @@ msgstr "NAMA"
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:20
 msgid "wesnoth - Battle for Wesnoth, a turn-based fantasy strategy game"
-msgstr "wesnoth - Berjuang demi Wesnoth, Suatu game khayalan  strategi "
+msgstr "wesnoth - Pertempuran demi Wesnoth, Suatu game strategi khayalan "
 
 # type: SH
 #. type: SH
@@ -123,7 +123,7 @@ msgstr "set nilai BitsPerPixel. Contoh: B<--bpp 32>"
 #: ../../doc/man/wesnoth.6:49
 #, no-wrap
 msgid "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
-msgstr ""
+msgstr "B<-c, --campaign[[E<lt>difficultyE<gt>] E<lt>id_campaignE<gt> [E<lt>id_scenarioE<gt>]]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:56
@@ -136,6 +136,13 @@ msgid ""
 "the final argument> aswell, otherwise the game will take the campaign/"
 "scenario id as the data dir."
 msgstr ""
+"pergi langsung ke kampanye berdasarkan parameter-parameter. Kesulitan adalah "
+"nomor antara 1 dan nomor kesulitan kampanye saat ini. Kesulitan standar "
+"adalah 1. Skenario harus menjadi salah satu dari skenario-skenario anak "
+"kampanye. Skenario standar adalah skenario pertama kampanye. B<Note: Bila "
+"menggunakan tombol ini pastikan bahwa anda menentukan path direktori data "
+"sebagai argument akhir> juga, jika tidak permainan akan mengambil id "
+"kampanye/skenario sebagai data dir."
 
 # type: TP
 #. type: TP
@@ -147,15 +154,16 @@ msgstr "B<--config-dir>I<\\ name>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:63
-#, fuzzy
 msgid ""
 "sets the user configuration directory to I<name> under $HOME or \"My "
 "Documents\\eMy Games\" for windows.  You can also specify an absolute path "
 "for the configuration directory outside the $HOME or \"My Documents\\eMy "
 "Games\""
 msgstr ""
-"menentukan konfigurasi untuk direktori pengguna I<name> dalam $HOME or \"My "
-"Documents\\eMy Games\" for windows."
+"Menentukan konfigurasi direktori pengguna ke I<nama> dalam $HOME atau \"My "
+"Documents\\eMy Games\" untuk windows. Anda juga dapat menentukan suatu "
+"lokasi sesungguhnya untuk direktori konfigurasi diluar $HOME atau \"My "
+"Documents\\eMy Games\""
 
 # type: TP
 #. type: TP
@@ -174,12 +182,12 @@ msgstr "mencetak alur direktori konfigurasi pengguna dan keluar."
 #: ../../doc/man/wesnoth.6:66
 #, no-wrap
 msgid "B<--data-dir E<lt>directoryE<gt>>"
-msgstr ""
+msgstr "B<--data-dir E<lt>directoriE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:69
 msgid "overrides the data directory with the one specified"
-msgstr ""
+msgstr "menggantikan direktori data dengan yang ditetapkan"
 
 # type: TP
 #. type: TP
@@ -209,13 +217,12 @@ msgstr "B<-e,\\ --editor>I<\\ file>"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:79
-#, fuzzy
 msgid ""
 "start the in-game map editor directly. If I<file> is specified, equivalent "
 "to B<-l --load>"
 msgstr ""
-"mulai editor peta dalam game secara langsung. jika I<file> ditetapkan, "
-"setara dengan B<-e --load>"
+"mulai editor peta dalam game secara langsung. Jika I<file> ditetapkan, "
+"setara dengan B<-l --load>"
 
 # type: TP
 #. type: TP
@@ -339,9 +346,9 @@ msgstr ""
 # type: TP
 #. type: TP
 #: ../../doc/man/wesnoth.6:122
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "B<--logdomains\\ [filter]>"
-msgstr "B<--logdomains>"
+msgstr "B<--logdomains\\ [saringan]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:127
@@ -349,6 +356,8 @@ msgid ""
 "lists defined log domains (only the ones containing B<filter> if used) and "
 "exits"
 msgstr ""
+"daftar log domain ditetapkan (hanya yang berisi B<filter> jika digunakan) "
+"dan keluar"
 
 # type: TP
 #. type: TP
@@ -390,12 +399,12 @@ msgstr ""
 #: ../../doc/man/wesnoth.6:139
 #, no-wrap
 msgid "B<--new-syntax>"
-msgstr ""
+msgstr "B<--new-syntax>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:142
 msgid "enables the new campaign syntax parsing."
-msgstr ""
+msgstr "memungkinkan penguraian kampanye sintaksis baru."
 
 # type: TP
 #. type: TP
@@ -470,7 +479,7 @@ msgstr "mencetak nama direktori data game dan keluar."
 #: ../../doc/man/wesnoth.6:158
 #, no-wrap
 msgid "B<--preprocess, -p[=E<lt>define1E<gt>,E<lt>define2E<gt>,...] E<lt>file/folderE<gt> E<lt>target directoryE<gt>>"
-msgstr ""
+msgstr "B<--preprocess, -p[=E<lt>menetapkan1E<gt>,E<lt>menetapkan2E<gt>,...] E<lt>file/folderE<gt> E<lt>direktori targetE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:172
@@ -486,12 +495,23 @@ msgid ""
 "campaigns/tutorial ~/result> or B<-p=MULTIPLAYER,MY_OWN_CAMPAIGN ~/wesnoth/"
 "data/campaign/camp ~/result>"
 msgstr ""
+"preprocesses file/folder tertentu. File (file-file) akan ditulis dalam "
+"direktori target tertentu: sebuah file cfg biasa dan sebuah file cfg "
+"terproses. Jika folder tersebut ditentukan, maka akan dipreprocess secara "
+"berulang berdasarkan kebiasaan-kebiasaan preprocessor yang dikenal. Macros-"
+"macros umum dari data/core/macros akan dipreprocess sebelum sumber-sumber "
+"ditentukan. B<define1,define2,...> - penetapan tambahan akan ditambahkan "
+"sebelum memproses file-file. Jika anda ingin menambahkannya anda harus "
+"menambahkan karakter '=' sebelumnya. Jika 'SKIP_CORE' berada dalam daftar "
+"penetapan data/core tidak akan dipreprocess. Contoh: B<-p ~/wesnoth/data/"
+"campaigns/tutorial ~/result> atau B<-p=MULTIPLAYER,MY_OWN_CAMPAIGN ~/wesnoth/"
+"data/campaign/camp ~/result>"
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:172
 #, no-wrap
 msgid "B<--preprocess-input-macros E<lt>source fileE<gt>>"
-msgstr ""
+msgstr "B<--preprocess-input-macros E<lt>file sumberE<gt>>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:176
@@ -499,12 +519,14 @@ msgid ""
 "used only by the '--preprocess' command.  Specifies a file that contains "
 "[preproc_define]s to be included before preprocessing."
 msgstr ""
+"hanya digunakan oleh perintah '--preprocess'. Menentukan file yang berisi "
+"[preproc_define]s untuk dimasukkan sebelum preprocessing."
 
 #. type: TP
 #: ../../doc/man/wesnoth.6:176
 #, no-wrap
 msgid "B<--preprocess-output-macros [E<lt>target fileE<gt>]>"
-msgstr ""
+msgstr "B<--preprocess-output-macros [E<lt>file targetE<gt>]>"
 
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:182
@@ -514,6 +536,10 @@ msgid ""
 "file '_MACROS_.cfg' in the target directory of preprocess's command.  This "
 "switch should be typed before the --preprocess command."
 msgstr ""
+"hanya digunakan oleh perintah '--preprocess' . Akan menampilkan semua macro "
+"preproses dalam file target. Jika file tidak ditentukan output akan menjadi "
+"file '_MACROS_.cfg' dalam direktori target dari perintah preprocess. "
+"Penggantian ini harus diketik sebelum perintah --preprocess."
 
 # type: TP
 #. type: TP
@@ -875,12 +901,9 @@ msgstr "HAK CIPTA"
 # type: Plain text
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:290 ../../doc/man/wesnothd.6:280
-#, fuzzy
-#| msgid ""
-#| "Copyright \\(co 2003-2009 David White E<lt>davidnwhite@verizon.netE<gt>"
 msgid "Copyright \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 msgstr ""
-"Hak Cipta \\(co 2003-2009 David White E<lt>davidnwhite@verizon.netE<gt>"
+"Hak Cipta \\(co 2003-2011 David White E<lt>davidnwhite@verizon.netE<gt>"
 
 # type: Plain text
 #. type: Plain text
@@ -905,9 +928,8 @@ msgstr "KUNJUNGI JUGA"
 # type: TH
 #. type: Plain text
 #: ../../doc/man/wesnoth.6:296
-#, fuzzy
 msgid "B<wesnothd>(6)."
-msgstr "wesnothd"
+msgstr "B<wesnothd>(6)."
 
 # type: TH
 #. type: TH
@@ -928,7 +950,7 @@ msgstr "wesnothd"
 #: ../../doc/man/wesnothd.6:16
 #, no-wrap
 msgid "Battle for Wesnoth multiplayer network daemon"
-msgstr "Battle for Wesnoth multipemain jaringan daemon"
+msgstr "Pertempuran demi Wesnoth multipemain jaringan daemon"
 
 # type: Plain text
 #. type: Plain text
@@ -960,9 +982,10 @@ msgid ""
 "wiki/ServerAdministration on what commands the server accepts via the "
 "wesnoth client (/query ...) or the fifo."
 msgstr ""
-"Mengatur Pertempuran untuk multiplayer game Wesnoth. Lihat http://www."
-"wesnoth.org/wiki/ServerAdministration untuk mengetahui perintah apa yang "
-"server terima melalui klien Wesnoth (/ query ...) atau fifo tersebut."
+"Mengatur Pertempuran demi Wesnoth permainan-permainan multiplayer. Lihat "
+"http://www.wesnoth.org/wiki/ServerAdministration untuk mengetahui perintah "
+"apa yang server terima melalui klien Wesnoth (/ query ...) atau fifo "
+"tersebut."
 
 # type: TP
 #. type: TP
@@ -1802,41 +1825,5 @@ msgstr ""
 
 #. type: Plain text
 #: ../../doc/man/wesnothd.6:286
-#, fuzzy
 msgid "B<wesnoth>(6)."
-msgstr "wesnoth"
-
-# type: TP
-#~ msgid "B<--smallgui>"
-#~ msgstr "B<--smallgui>"
-
-# type: Plain text
-#~ msgid ""
-#~ "allows to use screen resolutions down to 800x480 and resizes a few "
-#~ "interface elements."
-#~ msgstr ""
-#~ "mengijinkan untuk menggunakan resolusi layar hingga ke 800x480 dan "
-#~ "merubah ukuran beberapa unsur-unsur alat penghubung."
-
-#~ msgid "2009"
-#~ msgstr "2009"
-
-# type: TP
-#~ msgid "B<-c, --campaign>"
-#~ msgstr "B<-c, --campaign>"
-
-# type: Plain text
-#~ msgid "goes directly to the campaign selection menu."
-#~ msgstr "pergi secara langsung kepada menu pemilihan kampanye."
-
-# type: Plain text
-#~ msgid "Dumps a list of all log domains and exits."
-#~ msgstr "Membuang semua daftar tercatat dan keluar."
-
-# type: Plain text
-#~ msgid "B<wesnoth_editor>(6), B<wesnothd>(6)"
-#~ msgstr "B<wesnoth_editor>(6), B<wesnothd>(6)"
-
-# type: Plain text
-#~ msgid "B<wesnoth>(6), B<wesnoth_editor>(6)"
-#~ msgstr "B<wesnoth>(6), B<wesnoth_editor>(6)"
+msgstr "B<wesnoth>(6)."
